Make logo clickable and update super-hb page

--- a/style.css
+++ b/style.css
@@ -41,9 +41,11 @@ body {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  text-decoration: none;
+  color: inherit;
 }
 .logo img {
-  height: 90px;
+  height: 110px;
 }
 nav .nav-list {
   display: flex;
